-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.2.0-beta1
-
None
-
05c267673f43ecbb0ae4c44adc7d02a690435f8b
Namely, the update() function does this when being called from a search thread. Here is an excerpt from an example stack trace:
9 libQbsProjectManager.so 0x00007eff925c2b2c QbsProjectManager::Internal::QbsProject::files(ProjectExplorer::Project::FilesMode) const + 44 10 libProjectExplorer.so 0x00007eff9cf54d88 ProjectExplorer::Internal::AllProjectsFilter::updateFiles() + 216 11 libCore.so 0x00007effa539ff1b Core::BaseFileFilter::matchesFor(QFutureInterface<Core::LocatorFilterEntry>&, QString const&) + 75 12 libCore.so 0x00007effa52c13d9 Core::Internal::runSearch(QFutureInterface<Core::LocatorFilterEntry>&, QList<Core::ILocatorFilter*>, QString) + 473 13 libCore.so 0x00007effa52e405f QtConcurrent::StoredInterfaceFunctionCall2<Core::LocatorFilterEntry, void (*)(QFutureInterface<Core::LocatorFilterEntry>&, QList<Core::ILocatorFilter*>, QString), QList<Core::ILocatorFilter*>, QString>::run() + 79
This one was caused by AllProjectsFilter. The CurrentProjectFilter class seems to have the same problem, judging from the code.
| For Gerrit Dashboard: QTCREATORBUG-12592 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 88885,2 | Fix crash with "Files in Any/Current Project" locator filters | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 95447,3 | Locator: Fix the fix of the deadlock | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 95449,1 | Locator: Fix the fix of the deadlock | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |